Created azure function ap

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,14 +56,14 @@
          <div class="banner-text">
             <h1 class="responsive-headline">Hi, I'm Adam</h1>
             
-            <p>and this page has been viewed <a id="counter"></a> times :) </p> 
+            <p>and this page has been viewed <a id="counter"></a> times </p> 
             <ul class="social">
                <li><a href="https://adamampaya.com"><i class="fa fa-external-link"></i></a></li>
                <li><a href="https://linkedin.com/in/adamampaya"><i class="fa fa-linkedin"></i></a></li>
             </ul>
          </div>
       </div>
-
+     
       <p class="scrolldown">
          <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
       </p>
@@ -187,6 +187,75 @@
 
       </div> <!-- End Education -->
 
+
+<!-- Resume Section
+================================================== -->
+<section id="resume">
+
+   <!-- Education
+   ----------------------------------------------- -->
+   <div class="row education">
+ 
+     <div class="nine columns main-col">
+ 
+       <div class="row item">
+ 
+         <div class="twelve columns">
+ 
+           <h2>Life Pacific University</h2>
+           <h3>Bachelor of Arts - Business Administration</h3>
+           <p class="info"><em class="date">Graduated with honors; Magna cum laude</em></p>
+ 
+         </div>
+ 
+       </div> <!-- item end -->
+ 
+     </div> <!-- main-col end -->
+ 
+     <div class="three columns header-col">
+       <h1><span>Certifications</span></h1>
+     </div>
+ 
+     <div class="nine columns main-col">
+ 
+       <div class="row item">
+ 
+         <div class="twelve columns">
+ 
+           <h3>CompTIA A+</h3>
+           <p class="info"><em class="date">Issued October 2020, Expires July 2027</em></p>
+ 
+         </div>
+ 
+       </div> <!-- item end -->
+ 
+       <div class="row item">
+ 
+         <div class="twelve columns">
+ 
+           <h3>CompTIA Network+</h3>
+           <p class="info"><em class="date">Issued July 2021, Expires July 2027</em></p>
+ 
+         </div>
+ 
+       </div> <!-- item end -->
+ 
+       <div class="row item">
+ 
+         <div class="twelve columns">
+ 
+           <h3>CompTIA Security+</h3>
+           <p class="info"><em class="date">Issued February 2022, Expires February 2025</em></p>
+ 
+         </div>
+ 
+       </div> <!-- item end -->
+ 
+     </div> <!-- main-col end -->
+ 
+   </div> <!-- End Education -->
+ 
+ </section> <!-- Resume Section End--> 
 
       <!-- Work
       ----------------------------------------------- -->
